[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Pistol.gd" type="Script" id=1]
[ext_resource path="res://res/exported/pistol.png" type="Texture" id=2]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://res/exported/sound/pistol shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://res/exported/sound/pistol reload.wav" type="AudioStream" id=5]
[ext_resource path="res://res/exported/light.png" type="Texture" id=6]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( 36, -2, 40, -2, 40, 2, 36, 2 )

[node name="Pistol" type="Sprite"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -15, -6 )
script = ExtResource( 1 )
damage = 2
currentClip = 17
clip = 17
reloadTimeFrames = 260
fireRate = 55
knockbackMultiplier = 100
weaponWeight = 1
Bullet = ExtResource( 3 )

[node name="BarrelEnd" type="Position2D" parent="."]
position = Vector2( 40, 0 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="Label2" type="Label" parent="."]
margin_top = 16.0
margin_right = 40.0
margin_bottom = 30.0

[node name="ShootSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="ReloadSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="MuzzleFlash" type="Light2D" parent="."]
position = Vector2( 48, 0 )
texture = ExtResource( 6 )
color = Color( 0.866667, 1, 0.533333, 1 )
range_height = 10.0
shadow_enabled = true
shadow_gradient_length = 300.0
shadow_filter = 5
shadow_filter_smooth = 64.0

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 1 )
